--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   equatable: ^2.0.5
   firebase_auth: ^3.6.2
   firebase_core: ^1.20.0
+  firebase_storage: ^10.3.10
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
