--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   intl: ^0.17.0
   material_design_icons_flutter: ^5.0.6996
   provider: ^6.0.3
+  random_string: ^2.3.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
