--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   intl: ^0.17.0
   material_design_icons_flutter: ^5.0.6996
   provider: ^6.0.3
+  qr_flutter: ^4.0.0
   random_string: ^2.3.1
 
 dev_dependencies:
